--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm install && npm run build",
     "heroku-postbuild": "npm run build",
-    "start": "cd server && node index.js"
+    "start": "cd server && npm install && node index.js"
   },
   "repository": {
     "type": "git",
